feat: delete attendance
